tests/paczka1/fuzzy1/69459183.err
Error in line 3: HNtHR0g A121 90,2
Error in line 10: HNtHR0g A751 243,0
Error in line 18: LWBRaei7 A40 82,6
Error in line 12: sfx A751 26,2
Error in line 24: HNtHR0g S316 37,1
